--- a/views/login.mustache
+++ b/views/login.mustache
@@ -10,7 +10,7 @@
 </head>
 
 <body class="signup-body">
-  <h1>Log in!</h1>
+  <h1>Log In</h1>
   {{#errors}}
   <h4>{{.}}</h4>
   {{/errors}}
@@ -18,7 +18,7 @@
     <form class="signup-form" action="/auth/login" method="POST">
       <input class="signup-form-input" type="text" name="username" placeholder="username" required> <br>
       <input class="signup-form-input" type="password" name="password" placeholder="password" required> <br>
-      <button class="btn" type="Submit">Log in!</button>
+      <button class="btn" type="Submit">Log In</button>
     </form>
   </div>
 </body>
