--- a/views/signup.mustache
+++ b/views/signup.mustache
@@ -10,7 +10,7 @@
 </head>
 
 <body class="signup-body">
-  <h1>Sign up!</h1>
+  <h1>Sign up</h1>
   <div class="form-box">
     <form class="signup-form" action="/auth/signup" method="POST">
       <input class="signup-form-input" type="text" name="name" placeholder="Name" autocomplete="off" required>
@@ -18,7 +18,7 @@
       <input class="signup-form-input" type="text" name="username" placeholder="Username" autocomplete="off" required>
       <input class="signup-form-input" type="password" name="password" placeholder="Password" autocomplete="off" required>
 
-      <button type="Submit" class="btn">Sign Up!</button>
+      <button type="Submit" class="btn">Sign Up</button>
     </form>
   </div>
 </body>
